--- a/public/home/templates/home.html
+++ b/public/home/templates/home.html
@@ -1,8 +1,13 @@
-<div>
-  <h1>Projects</h1>
-  <ul>
-    <li ng-repeat="project in ctrl.projects track by $index">
-      <a href="/#/project/{{$index}}">{{project.name}}</a>
-    </li>
-  </ul>
+<div class="container" >
+  <div class="jumbotron">
+    <h1>Projects</h1>
+  </div>
+
+  <div>
+    <table class="table table-bordered table-condensed">
+      <tr ng-repeat="project in ctrl.projects track by $index">
+        <th><a href="/#/project/{{$index}}">{{project.name}}</a></th>
+      </tr>
+    </table>
+  </div>
 </div>
