migrate CRUD API to express server

--- a/public/home/templates/home.html
+++ b/public/home/templates/home.html
@@ -5,8 +5,8 @@
 
   <div>
     <table class="table table-bordered table-condensed">
-      <tr ng-repeat="project in ctrl.projects track by $index">
-        <th><a href="/#/project/{{$index}}">{{project.name}}</a></th>
+      <tr ng-repeat="project in ctrl.projects">
+        <th><a href="/#/project/{{project.id}}">{{project.name}}</a></th>
       </tr>
     </table>
   </div>
